--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                     </div>
                 </div>
                 <div class="col">
-                    <img src="/imagens/homemTelinhaBranca.png" alt="">
+                    <img src="./imagens/homemTelinhaBranca.png" alt="">
                 </div>
             </div>
         </div>
@@ -81,7 +81,7 @@
                         aquecidos do momento com vagas remotas e salários iniciais entre R$ 2k e 4k.</p>
                 </div>
                 <div class="col">
-                    <img src="/imagens/mulherPrimeira.png" alt="">
+                    <img src="./imagens/mulherPrimeira.png" alt="">
                 </div>
             </div>
         </div>
@@ -103,7 +103,7 @@
 
                         </p>
                     </div>
-                    <img src="/imagens/telinharoxa.png" alt="" style="width: 150vh; height: 90vh;">
+                    <img src="./imagens/telinharoxa.png" alt="" style="width: 150vh; height: 90vh;">
 
                 </div>
             </div>
@@ -130,21 +130,21 @@
                         <div class="row pb-5">
                             <div class="col text-start mx-2 p-5"
                                 style="color: #fff; background-color: #121214; border: 1.5px solid #29292e;">
-                                <img src="/imagens/computador.png" alt="" style="width: 15vh; height:12vh;">
+                                <img src="./imagens/computador.png" alt="" style="width: 15vh; height:12vh;">
                                 <h1 class="fw-bolder text-start pb-3 pt-3 fs-3" style="color: #fff;">70% coding</h1>
                                 <p class="  fs-6" style="color: #c4c4cc;">Desenvolva as habilidades técnicas necessárias
                                     para lidar com desafios do mundo real</p>
                             </div>
                             <div class="col text-start mx-2 p-5"
                                 style="color: #fff; background-color: #121214; border: 1.5px solid #29292e;">
-                                <img src="/imagens/networking.png" alt="" style="width: 15vh; height:12vh;">
+                                <img src="./imagens/networking.png" alt="" style="width: 15vh; height:12vh;">
                                 <h1 class="fw-bolder text-start pb-3 pt-3 fs-3" style="color: #fff;">20% Networking</h1>
                                 <p class="  fs-6" style="color: #c4c4cc;">Aprenda a se conectar com comunidades e
                                     evoluir em grupo, além de fixar o seu aprendizado</p>
                             </div>
                             <div class="col text-start mx-2 p-5"
                                 style="color: #fff; background-color: #121214; border: 1.5px solid #29292e;">
-                                <img src="/imagens/flecha.png" alt="" style="width: 15vh; height:12vh;">
+                                <img src="./imagens/flecha.png" alt="" style="width: 15vh; height:12vh;">
                                 <h1 class="fw-bolder text-start pb-3 pt-3 fs-3" style="color: #fff;">70% coding</h1>
                                 <p class="  fs-6" style="color: #c4c4cc;">Construa uma marca pessoal forte e seja a
                                     principal escolha dos recrutadores</p>
@@ -226,7 +226,7 @@
                     começando na área de desenvolvimento web. </p>
             </div>
             <div class="col pb-5">
-                <img src="/imagens/certificado.png" alt="" class="text-center pt-3">
+                <img src="./imagens/certificado.png" alt="" class="text-center pt-3">
             </div>
         </div>
     </div>
@@ -234,7 +234,7 @@
     <div class="px-5 text-center w-100  pt-5" style="background-color: #121214;">
         <div class="row">
             <div class="col">
-                <img src="/imagens/homemcomcursosatras.png" alt="">
+                <img src="./imagens/homemcomcursosatras.png" alt="">
             </div>
             <div class="col me-3 py-5">
                 <p class="text-start  fs-6 fw-bold" style="color: #996dff;">COM QUEM VOCÊ VAI APRENDER</p>
