--- a/index.html
+++ b/index.html
@@ -11,11 +11,6 @@
         defer></script>
     <title>LandingPage</title>
 
-    <style>
-        .h100 {
-            height: 100px;
-        }
-    </style>
     <link rel="stylesheet" href="/css/style.ss">
 </head>
 
@@ -280,6 +275,69 @@
                 </div>
             </div>
         </div>
+
+        <div class="px-5 text-center w-100   pt-5" style="background-color: black; padding-bottom: 10vh;">
+            <div class="row">
+                <div class="col me-3 py-5" style="padding-left: 5vh; padding-right: 5vh;">
+                    <p class="text-start fs-6 fw-bold" style="color: #996dff;">DEPOIMENTOS</p>
+                    <h1 class="fw-bolder text-start pb-5  fs-1" style="color: #fff;">O que dizem devs que <br> decolaram
+                        com a Rocketseat</h1>
+
+                </div>
+            </div>
+            <div class=" ps-3 text-start">
+                <div class="row align-items-start">
+                    <div class="col">
+                        <p class="pe-3" style="color: #c4c4cc;">“Muita coisa mudou na minha vida em relação a programação. Uma delas
+                            foi o direcionamento e o foco. Eu não sabia pra
+                            que lado ir, pra onde ir, o que fazer e a Rocketseat me trouxe isso. Hoje meu foco é em
+                            front-end, sou aluna do
+                            Explorer e tenho aprendido muito com o Maykão,”</p>
+                        <div class="row">
+                            <div class="col w-25">
+                                <img class="w-25 rounded-circle" src="./imagens/mulher3.jpeg" width="20" alt="">
+                            </div>
+                            
+
+                        </div>
+
+                    </div>
+                    <div class="col">
+                        <p class="pe-3" style="color: #c4c4cc;">"Eu terminei o meu ensino médio em 2019, acredito que como a maioria
+                            das pessoas eu não fazia ideia do que eu ia
+                            fazer da minha vida dali pra frente. As faculdades que eu queria, eu não passei, então eu
+                            tava completamente
+                            perdida. Comecei uma faculdade, não me encontrei, tranquei e por acaso eu comecei na área de
+                            programação, comecei a
+                            ver cursos e tava estudando até que um dia eu vi um anúncio da Rocketseat e eu amei, foi um
+                            divisor de água na minha
+                            vida e nos meus estudos."</p>
+                            <div class="row">
+                                <div class="col w-25">
+                                    <img class="w-25 rounded-circle" src="./imagens/mulher2.jpg" width="20" alt="">
+                                </div>
+                            </div>
+                    </div>
+                    <div class="col">
+                        <p class="pe-3" style="color: #c4c4cc;">“Eu trabalhei pra minha família como vendedor por 12 anos até que há
+                            3 anos atrás eu conheci a Rocketseat. Eu aprendi
+                            a organizar meus estudos, a ter foco e vi que a tecnologia é muito mais que um simples
+                            website, ela é um ecossistema
+                            completo. Foi através de toda essa qualidade que a Rocketseat entrega que eu decidi fazer
+                            uma transição de carreira,
+                            mas não no Brasil. Eu, minha esposa e minha filha viemos para Itália e em dois meses depois
+                            eu estava empregado numa
+                            empresa de Malta trabalhando remotamente.”</p>
+                            <div class="row">
+                                <div class="col w-25">
+                                    <img class="w-25 rounded-circle" src="./imagens/homemcomentario.jpg" width="20" alt="">
+                                </div>
+                            </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
 
         <div class="px-5 text-center w-100   pt-5" style="background-image: url(https://global-uploads.webflow.com/61d83a2…/639f77c…_background-cta-min.png),linear-gradient(100deg,#8257e5,#271a45);
         background-position: 50%,0 0;
